# SimpleEngine

SimpleEngineCore/: CMakeLists.txt
SimpleEngineCore/includes/SimpleEngineCore/: Application.hpp
SimpleEngineCore/includes/SimpleEngineCore/Utils/: test.hpp
SimpleEngineCore/src/SimpleEngineCore/: Application.cpp
SimpleEngineCore/src/SimpleEngineCore/Utils/: test.cpp
SimpleEngineEditor/src/: main.cpp
